Bandaid fix for randbox not squishing nicely, fixed basis
Hardcoded the flex-basis for the <figure> elements to 120px. I'd much prefer if
the class could get that information from its child <img> but I don't know how
to do that.

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ section.random > * {
 }
 div.grab-bag {
     display: flex;
+    justify-content: space-around;
     font-size: 0.8rem;
     text-align: center;
 }
@@ -117,5 +118,6 @@ div.grab-bag {
 }
 
 .random figure {
+    flex: 0 1 120px;
     margin: 8px;
 }
